# Create-an-AI-capable-of-novel-reasoning

./: ARC_solution_plan.md  README.md  pyproject.toml
docs/: arc_solution_blueprint.md
src/arc_solve/: __init__.py  cli.py  dataset.py  grid.py  pipeline.py  vision.py
src/arc_solve/solvers/: base.py  rule_based.py
tests/: test_grid.py  test_pipeline.py  test_vision.py
