[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-solve"
version = "0.1.0"
description = "Rule-based reasoning toolkit for the ARC Prize competition"
authors = [{name = "ARC Research Team"}]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ARC", "reasoning", "rule-based"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
